# Gurren

./: .gitignore  .gitmodules  FCI_TEST.md  LICENSE  Milestone.md  ReadMe.md
Docs/: CustomizeRosController.md  Milestone.md  MoveItGazeboDemo.md  MoveitSubmoduke.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/ur_dashboard_msgs/: AddToLog.h  AddToLogRequest.h  AddToLogResponse.h  GetLoadedProgram.h  GetLoadedProgramRequest.h  GetLoadedProgramResponse.h  GetProgramState.h  GetProgramStateRequest.h  GetProgramStateResponse.h  GetRobotMode.h  GetRobotModeRequest.h  GetRobotModeResponse.h  GetSafetyMode.h  GetSafetyModeRequest.h  GetSafetyModeResponse.h  IsProgramRunning.h  IsProgramRunningRequest.h  IsProgramRunningResponse.h  IsProgramSaved.h  IsProgramSavedRequest.h  IsProgramSavedResponse.h  Load.h  LoadRequest.h  LoadResponse.h  Popup.h  PopupRequest.h  PopupResponse.h  ProgramState.h  RawRequest.h  RawRequestRequest.h  RawRequestResponse.h  RobotMode.h  SafetyMode.h  SetModeAction.h  SetModeActionFeedback.h  SetModeActionGoal.h  SetModeActionResult.h  SetModeFeedback.h  SetModeGoal.h  SetModeResult.h
catkin_ws/devel/lib/controller_stopper/: node
catkin_ws/devel/lib/pkgconfig/: controller_stopper.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur16e_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_moveit_config.pc  ur5e_moveit_config.pc  ur_calibration.pc  ur_dashboard_msgs.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc  ur_robot_driver.pc
catkin_ws/devel/lib/ur_calibration/: calibration_correction
catkin_ws/devel/lib/ur_robot_driver/: test_move
catkin_ws/src/zz_test/: CMakeLists.txt  package.xml
catkin_ws/src/zz_test/config/: camera_setting.yaml
catkin_ws/src/zz_test/launch/: motion_planning_pipeline_tutorial.launch  move_group.launch  move_group_interface_tutorial.launch  move_group_interface_tutorial_backup.launch  moveit copy.rviz  moveit.rviz  moveit_rviz.launch  planning_context.launch  ur5_gazebo_test.launch  ur5_moveit_planning_execution.launch  zz_motion_planning_api_tutorial.launch  zz_test.launch
catkin_ws/src/zz_test/launch/inc/: load_ur.launch.xml  load_ur5.launch.xml  ur_control.launch.xml
catkin_ws/src/zz_test/models/RD9C37-LQ/: model.config  model.sdf
catkin_ws/src/zz_test/models/ar35/: model.config  model.sdf
catkin_ws/src/zz_test/models/ar35/meshes/: AR35.stl
catkin_ws/src/zz_test/src/: driver.cpp  rings_model.h  zz_motion_planning_api_tutorial copy.cpp  zz_motion_planning_pipeline_tutorial.cpp  zz_move_group_interface_tutorial.cpp  zz_move_group_interface_tutorial_backup.cpp
catkin_ws/src/zz_test/src/cv_camera/: capture.h  driver.h
catkin_ws/src/zz_test/urdf/: ur.xacro  ur5.xacro  ur_macro.xacro
catkin_ws/src/zz_test/urdf/inc/: camera.gazebo.xacro  ur5_macro.xacro  ur_macro.xacro
catkin_ws/src/zz_test/worlds/: contact.world  customize.world  forcesensor.world  shapes_backup.world  spring_test.world
fci_ws/src/franka_ros/franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
my_test/.catkin_tools/profiles/default/: devel_collisions.txt
my_test/src/: ReadMe.md
my_test/src/my_controller/cartesian_controller/: CMakeLists.txt  cartesian_controller_plugin.xml  package.xml
my_test/src/my_controller/cartesian_velocity_controller/: CMakeLists.txt  cartesian_velocity_controller_plugin.xml  package.xml
my_test/src/my_controller/cartesian_velocity_position_controller/: CMakeLists.txt  cartesian_velocity_position_controller_plugin.xml  package.xml
my_test/src/my_controller/test_controller/: CMakeLists.txt  package.xml  test_controller_plugin.xml
ws_moveit/src/: .rosinstall  .rosinstall.bak
ws_moveit/src/zz_beginner_tutorials/: CMakeLists.txt  package.xml
ws_moveit/src/zz_beginner_tutorials/launch/: move_group_interface_tutorial.launch  move_group_interface_tutorial_backup.launch
ws_moveit/src/zz_beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  zz_move_group_interface_tutorial.cpp  zz_move_group_interface_tutorial_backup.cpp
ws_moveit/src/zz_config_ur5/: .setup_assistant  CMakeLists.txt  package.xml
ws_moveit/src/zz_config_ur5/config/: fake_controllers.yaml  gazebo_ur5.urdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5.srdf
ws_moveit/src/zz_config_ur5/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  zz_gazobo.launch  (+1 more)
(+99 files in other folders)
